--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,10 +23,12 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17
+        go-version: 1.18
 
     - name: install
-      run: GO111MODULE=off go get golang.org/x/tools/cmd/goimports honnef.co/go/tools/cmd/staticcheck
+      run: |
+        GO111MODULE=off go get golang.org/x/tools/cmd/goimports
+        go install honnef.co/go/tools/cmd/staticcheck@master
 
     - name: Test
       run: |
