add ENFORCESCHEMALOGONLY flag

--- a/cmd/mongoproxy/test.conf
+++ b/cmd/mongoproxy/test.conf
@@ -44,7 +44,8 @@
         {
             "name": "schema",
             "config": {
-                "schemaPath": "../../pkg/mongoproxy/plugins/schema/example.json"
+                "schemaPath": "../../pkg/mongoproxy/plugins/schema/example.json",
+                "enforceSchemaLogOnly": true
             }
         },
         {
