--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,6 +41,8 @@ jobs:
     # start mongo
     - name: MongoDB in GitHub Actions
       uses: supercharge/mongodb-github-action@1.7.0
+      with:
+        mongodb-version: '4.4'
     
     - name: wait for mongo
       run: ci/waitnetwork.bash localhost 27017
