--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,10 +43,13 @@ jobs:
       uses: supercharge/mongodb-github-action@1.7.0
       with:
         mongodb-version: '4.4'
-    
+
     - name: wait for mongo
       run: ci/waitnetwork.bash localhost 27017
     
+    - name: test mongo
+      run: which mongod && which mongo && echo $PATH
+
     - name: start mongoproxy
       run: cd cmd/mongoproxy && make ci &
 
