--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,9 +43,11 @@ jobs:
       uses: supercharge/mongodb-github-action@1.7.0
       with:
         mongodb-version: '4.4'
+      shell: /bin/bash
 
     - name: wait for mongo
       run: ci/waitnetwork.bash localhost 27017
+      shell: /bin/bash
     
     - name: Verify MongoDB Installation
       run: |
@@ -53,6 +55,7 @@ jobs:
         which mongo
         echo $(which mongod)
         echo $PATH
+      shell: /bin/bash
         
     - name: test mongo
       run: echo $(which mongod) && echo $(which mongo) && echo $PATH
