--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,7 +42,6 @@ jobs:
     - name: MongoDB in GitHub Actions
       uses: supercharge/mongodb-github-action@1.7.0
       with:
-        mongodb-version: '4.4'
         options: >-
           --health-cmd mongo
           --health-interval 10s
@@ -57,6 +56,8 @@ jobs:
         echo $(which mongod)
         echo $(which mongo)
         echo $PATH
+        lsof -i -P -n | grep LISTEN
+        ps -ef
         
     - name: start mongoproxy
       run: cd cmd/mongoproxy && make ci &
