--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -56,7 +56,9 @@ jobs:
         echo $(which mongod)
         echo $(which mongo)
         echo $PATH
+        echo '*******************************'
         echo $(ps -ef)
+        echo '$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$'
         echo $(lsof -i -P -n | grep LISTEN)
       
     - name: start mongoproxy
