--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -47,7 +47,17 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
+    
+    # Ubuntu removed mongo from their default installed database packages on Ubuntu 22.04.
+    # We install mongosh here.
+    - name: Install mongosh 
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget gnupg
+        wget -qO - https://www.mongodb.org/static/pgp/server-6.0.asc | sudo apt-key add -
+        echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/6.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-6.0.list
+        sudo apt-get update && sudo apt-get install -y mongodb-mongosh
+        
     - name: wait for mongo
       run: ci/waitnetwork.bash localhost 27017
     
