--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,8 +32,8 @@ jobs:
 
     - name: Test
       run: |
-        make fmt && git diff --exit-code && exit 0 # exit if nothing to commit
-        make imports && git diff --exit-code && exit 0 # exit if nothing to commit
+        make fmt && git diff --exit-code && exit 0
+        make imports && git diff --exit-code && exit 0
         make static-check
         make test
 
@@ -41,12 +41,12 @@ jobs:
     # start mongo
     - name: MongoDB in GitHub Actions
       uses: supercharge/mongodb-github-action@1.7.0
-      with:
-        options: >-
-          --health-cmd mongo
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+      # with:
+      #   options: >-
+      #     --health-cmd mongo
+      #     --health-interval 10s
+      #     --health-timeout 5s
+      #     --health-retries 5
     
     # Ubuntu removed mongo from their default installed database packages on Ubuntu 22.04.
     # We install mongosh here.
